Fix line breaks in tag names.

--- a/src/less/_page_blog.less
+++ b/src/less/_page_blog.less
@@ -142,6 +142,9 @@
         color: @blog-tag-link-color;
         font-size: 13px;
         margin-right: 2px;
+        white-space: nowrap;
+        display: inline-block;
+        margin-top: 10px;
 
         &:hover {
           background-color: @blog-tag-background-hover-color;
@@ -318,6 +321,7 @@
     margin-top: 15px;
     text-decoration: none;
     font-size: 13px;
+    white-space: nowrap;
 
     &:hover {
       .tag-cloud-name {
